tests/errors/missing_paren.js
// Error: Missing closing parenthesis
function missing_paren() {
  let x = (5 + 3;
  return x;
}

missing_paren();
